--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -2,7 +2,8 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="sketch.js"></script> -->
+  <script language="javascript" type="text/javascript" src="two_test.js"></script>
   <script language="javascript" type="text/javascript" src="../libraries/Poster_Control.js"></script>
   <!-- <link rel="stylesheet" href=".././Poster_Templates/styles.css"> -->
   <link rel="stylesheet" href="../styles.css">
