--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -6,10 +6,12 @@
   <link rel="stylesheet" href="../styles.css">
 
 
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="sketch.js"></script> -->
+  <!-- <script language="javascript" type="text/javascript" src="snap_idk.js"></script> -->
+  <!-- <script language="javascript" type="text/javascript" src="snap.js"></script> -->
+  <script language="javascript" type="text/javascript" src="two_snap.js"></script>
   <!-- <script language="javascript" type="text/javascript" src="rotate_test.js"></script> -->
   <!-- <script language="javascript" type="text/javascript" src="two_test.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="fade.js"></script> -->
 
   </head>
   <title>Test</title>
