--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -5,16 +5,9 @@
   <script language="javascript" type="text/javascript" src="../libraries/Poster_Control.js"></script>
   <link rel="stylesheet" href="../styles.css">
 
-  <!-- <script language="javascript" type="text/javascript" src="rotate_test.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="size_increase.js"></script> -->
 
-  <!-- <script language="javascript" type="text/javascript" src="snap_twice.js"></script> -->
-  <script language="javascript" type="text/javascript" src="snap.js"></script>
-  <!-- <script language="javascript" type="text/javascript" src="two_snap_old.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="two_test.js"></script> -->
+  <script language="javascript" type="text/javascript" src="script.js"></script>
 
-  <!-- <script language="javascript" type="text/javascript" src="test_only_big.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="two_sized.js"></script> -->
 
   </head>
   <title>Test</title>
