--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script language="javascript" type="text/javascript" src="Poster_Templates/libraries/Poster_Control.js"></script>
-  <link rel="stylesheet" href="Poster_Templates/styles.css">
+  <script language="javascript" type="text/javascript" src="/Poster_Templates/libraries/Poster_Control.js"></script>
+  <link rel="stylesheet" href="/Poster_Templates/styles.css">
 
 
   <!-- <script language="javascript" type="text/javascript" src="script.js"></script> -->
