--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="../styles.css">
 
 
-  <!-- <script language="javascript" type="text/javascript" src="script.js"></script> -->
+  <script language="javascript" type="text/javascript" src="script.js"></script>
   <!-- <script language="javascript" type="text/javascript" src="experiments.js"></script> -->
-  <script language="javascript" type="text/javascript" src="text.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="text.js"></script> -->
   <!-- <script language="javascript" type="text/javascript" src="rotationOut.js"></script> -->
   <!-- <script language="javascript" type="text/javascript" src="noRotation.js"></script> -->
 
