--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -6,11 +6,15 @@
   <link rel="stylesheet" href="../styles.css">
 
 
-  <script language="javascript" type="text/javascript" src="script.js"></script>
-  <!-- <script language="javascript" type="text/javascript" src="experiments.js"></script> -->
+  <!-- <script language="javascript" type="text/javascript" src="script.js"></script> -->
+  <!-- <script language="javascript" type="text/javascript" src="new_tests/bigNumbers.js"></script> -->
+   
+  <!-- <script language="javascript" type="text/javascript" src="new_tests/rotationOut.js"></script> -->
+  <!-- <script language="javascript" type="text/javascript" src="new_tests/mask.js"></script> -->
+
   <!-- <script language="javascript" type="text/javascript" src="text.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="rotationOut.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="noRotation.js"></script> -->
+  <!-- <script language="javascript" type="text/javascript" src="interaction.js"></script> -->
+  <script language="javascript" type="text/javascript" src="blur.js"></script>
 
 
   </head>
