updates monday morning

--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -6,15 +6,12 @@
   <link rel="stylesheet" href="../styles.css">
 
 
-  <!-- <script language="javascript" type="text/javascript" src="script.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="new_tests/bigNumbers.js"></script> -->
-   
-  <!-- <script language="javascript" type="text/javascript" src="new_tests/rotationOut.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="new_tests/mask.js"></script> -->
+  <!-- <script language="javascript" type="text/javascript" src="9.Dec/script_smallnumbers.js"></script> -->
+  <!-- <script language="javascript" type="text/javascript" src="9.Dec/interaction.js"></script> -->
+  <!-- <script language="javascript" type="text/javascript" src="9.Dec/blur.js"></script> -->
 
-  <!-- <script language="javascript" type="text/javascript" src="text.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="interaction.js"></script> -->
-  <script language="javascript" type="text/javascript" src="blur.js"></script>
+  <script language="javascript" type="text/javascript" src="script_blur.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="script_circle.js"></script> -->
 
 
   </head>
