--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -10,7 +10,8 @@
   <!-- <script language="javascript" type="text/javascript" src="9.Dec/interaction.js"></script> -->
   <!-- <script language="javascript" type="text/javascript" src="9.Dec/blur.js"></script> -->
 
-  <script language="javascript" type="text/javascript" src="script_blur.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="script_blur.js"></script> -->
+  <script language="javascript" type="text/javascript" src="script_blur_tests.js"></script>
   <!-- <script language="javascript" type="text/javascript" src="script_circle.js"></script> -->
 
 
