--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -12,9 +12,11 @@
   <!-- <script language="javascript" type="text/javascript" src="new_tests/rotationOut.js"></script> -->
   <!-- <script language="javascript" type="text/javascript" src="new_tests/rotationOut_small.js"></script> -->
 
-  <script language="javascript" type="text/javascript" src="script_blur.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="script_blur.js"></script> -->
   <!-- <script language="javascript" type="text/javascript" src="script_blur_tests.js"></script> -->
   <!-- <script language="javascript" type="text/javascript" src="script_circle.js"></script> -->
+
+  <script language="javascript" type="text/javascript" src="easing.js"></script>
 
 
   </head>
