--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -5,19 +5,7 @@
   <script language="javascript" type="text/javascript" src="../libraries/Poster_Control.js"></script>
   <link rel="stylesheet" href="../styles.css">
 
-
-  <!-- <script language="javascript" type="text/javascript" src="9.Dec/script_smallnumbers.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="9.Dec/interaction.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="9.Dec/blur.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="new_tests/rotationOut.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="new_tests/rotationOut_small.js"></script> -->
-
-  <!-- <script language="javascript" type="text/javascript" src="comments_for_ben.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="script_blur_tests.js"></script> -->
-  <!-- <script language="javascript" type="text/javascript" src="script_circle.js"></script> -->
-
-  <!-- <script language="javascript" type="text/javascript" src="easing.js"></script> -->
-  <script language="javascript" type="text/javascript" src="newEasing.js"></script>
+  <script language="javascript" type="text/javascript" src="script.js"></script>
 
 
   </head>
