cleaned up folders

--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -5,9 +5,8 @@
   <script language="javascript" type="text/javascript" src="../libraries/Poster_Control.js"></script>
   <link rel="stylesheet" href="../styles.css">
 
-  <!-- <script language="javascript" type="text/javascript" src="script.js"></script> -->
-  <script language="javascript" type="text/javascript" src="interactionTests.js"></script>
-  <!-- <script language="javascript" type="text/javascript" src="circle.js"></script> -->
+  <!-- <script language="javascript" type="text/javascript" src="10.Dec/interactionTests.js"></script> -->
+  <script language="javascript" type="text/javascript" src="script.js"></script>
 
 
   </head>
