--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="../styles.css">
 
   <script language="javascript" type="text/javascript" src="script.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="grain.js"></script> -->
 
 
   </head>
