--- a/Poster_Templates/Flo_Ben_Poster/index.html
+++ b/Poster_Templates/Flo_Ben_Poster/index.html
@@ -5,8 +5,8 @@
   <script language="javascript" type="text/javascript" src="../libraries/Poster_Control.js"></script>
   <link rel="stylesheet" href="../styles.css">
 
-  <!-- <script language="javascript" type="text/javascript" src="script.js"></script> -->
-  <script language="javascript" type="text/javascript" src="halftone_new.js"></script>
+  <script language="javascript" type="text/javascript" src="script.js"></script>
+  <!-- <script language="javascript" type="text/javascript" src="halftone_new.js"></script> -->
 
 
   </head>
