github pages test

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script language="javascript" type="text/javascript" src="./Poster_Templates/libraries/Poster_Control.js"></script>
   <link rel="stylesheet" href="./Poster_Templates/styles.css">
 
-  <script language="javascript" type="text/javascript" src="/Poster_Templates/Team7/script.js"></script>
+  <script language="javascript" type="text/javascript" src="./Poster_Templates/Team7/script.js"></script>
 
   <!-- <script language="javascript" type="text/javascript" src="halftone_working.js"></script> -->
 
